# ex-ray

./: CLAUDE.md  LICENSE  README.md  decisions.md  pyproject.toml
.claude/: CLAUDE.md  decisions-phase-3.md  mission.md
src/dev_trust_scanner/: cli.py
src/dev_trust_scanner/core/: models.py  orchestrator.py  reporting.py  static_analysis.py  webhook.py
src/dev_trust_scanner/plugins/github_actions/: __init__.py  scanner.py
src/dev_trust_scanner/plugins/github_actions/rules/: gha_rules.yaml
src/dev_trust_scanner/plugins/npm_lifecycle/: scanner.py
src/dev_trust_scanner/plugins/npm_lifecycle/rules/: npm_rules.yaml
src/dev_trust_scanner/plugins/vscode_tasks/: scanner.py
src/exray/: cli.py
src/exray/core/: models.py  orchestrator.py  plugin.py  reporting.py  static_analysis.py  webhook.py
src/exray/plugins/github_actions/: scanner.py
src/exray/plugins/github_actions/rules/: gha_rules.yaml
src/exray/plugins/npm_lifecycle/: __init__.py  scanner.py
src/exray/plugins/npm_lifecycle/rules/: npm_rules.yaml
src/exray/plugins/vscode_tasks/: __init__.py  scanner.py
src/exray/plugins/vscode_tasks/rules/: vscode_rules.yaml
tests/: test_e2e-sarif.py  test_e2e_sarif.py  test_github_actions.py  test_integration.py  test_models.py  test_npm_lifecycle.py  test_orchestrator.py  test_phase2_integration.py  test_plugin.py  test_reporting.py  test_static_analysis.py  test_tenant_metadata.py  test_vscode_tasks.py  test_webhook.py
tests/live-npm-test/: monkey-tags-53.4.1.tgz  wysimark-lite-0.25.17.tgz
tests/live-npm-test/monkey-tags-package/: index.js  package.json
tests/live-npm-test/package/: README.md  package.json
